# ur5_gripper_packages

./: .gitignore  MoveitSetupAssConfig.md  README.md
ur5_robotiq_bringup/: README.md  package.xml  setup.cfg  setup.py
ur5_robotiq_bringup/config/: controllers_sg.yaml
ur5_robotiq_bringup/launch/: sim_gz_sgb.launch.py  view_rviz_ur_robotiq.launch.py
ur5_robotiq_bringup/rviz/: view_robot.rviz  view_robot_ur_robotiq.rviz
ur5_robotiq_description/: CMakeLists.txt  README.md  package.xml
ur5_robotiq_description/urdf/: simple_gripper.xacro  test.urdf  ur_with_gripper_base.urdf.xacro  ur_with_gripper_moveit.urdf.xacro  ur_with_gripper_sim.urdf.xacro
